add support for a preprocessor before component eval
